@@ -84,7 +84,7 @@
         "name": "luoage",
         "email": "luoage@msn.cn"
     }],
-    "version": "2.9.1-2",
+    "version": "2.9.1-3",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
