@@ -7,6 +7,7 @@
 
 - fixed: sitemap language auto-setting
 - fixed: NoSQL: `builder.paginate()` a problem with zero limit (default limit will be `maxlimit`)
+- fixed: NoSQL number filtering
 
 ======= 2.9.0
 
